--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <a href="./index.html" style="font-size:30px">↩</a>
-    <div class="active">
-        <input class="inpTxt" type="text" id="datetime-picker" placeholder="2023-10-08 17:25"/>
-        <button class="btn" type="button" data-start>Start</button>
-    </div>
+    
+    <input class="inpTxt" type="text" id="datetime-picker"/>
+    <button class="btn disabled normal" type="button" data-start>Start</button>
+
 
     <div class="timer">
         <div class="field">
@@ -39,7 +39,7 @@
     </div>
 
 
-    <script href="./js/1-timer.js"></script>
+    <script type="module" src="./js/1-timer.js"></script>
 
 </body>
 </html>
